fix(captation): #42527, recorder icons should not be vertically aligned

--- a/modules/_recorder.scss
+++ b/modules/_recorder.scss
@@ -130,7 +130,7 @@ END DOCUMENTATION */
             margin: 10px 0 0;
         }
         &--control {
-            width: 50%
+            width: 48%
         }
     }
 }
